--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,7 +7,7 @@ apply plugin: 'kotlin-android-extensions'
 android {
     compileSdkVersion 26
     defaultConfig {
-        applicationId "com.cn.bjsc"
+        applicationId "com.cn.ssc"
         minSdkVersion 15
         targetSdkVersion 26
         versionCode 1
