--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="com.cn.bjsc">
+          package="com.cn.ssc">
 
     <permission
-        android:name="com.cn.bjsc.permission.JPUSH_MESSAGE"
+        android:name="com.cn.ssc.permission.JPUSH_MESSAGE"
         android:protectionLevel="signature"/>
     <!-- Required  一些系统要求的权限，如访问网络等-->
-    <uses-permission android:name="com.cn.bjsc.permission.JPUSH_MESSAGE"/>
+    <uses-permission android:name="com.cn.ssc.permission.JPUSH_MESSAGE"/>
     <uses-permission android:name="android.permission.RECEIVE_USER_PRESENT"/>
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.WAKE_LOCK"/>
@@ -61,15 +61,15 @@
         </meta-data>
 
         <meta-data android:name="JPUSH_CHANNEL" android:value="developer-default"/>
-        <meta-data android:name="JPUSH_APPKEY" android:value="eaccb36dd481a34bc8ddbebd" /> <!--  </>值来自开发者平台取得的AppKey-->
+        <meta-data android:name="JPUSH_APPKEY" android:value="881d4f1ba3bb6f8111bc1597" /> <!--  </>值来自开发者平台取得的AppKey-->
 
-        <activity android:name=".MainActivity">
+        <activity android:name="com.cn.ssc.MainActivity">
             <intent-filter>
                 <action android:name="jpush.testAction" />
                 <category android:name="jpush.testCategory" />
             </intent-filter>
         </activity>
-        <activity android:name=".ShuoMingActivity"></activity>
+        <activity android:name="com.cn.ssc.ShuoMingActivity"></activity>
         <!-- Rich push 核心功能 since 2.0.6-->
         <activity
             android:name="cn.jpush.android.ui.PopWinActivity"
@@ -86,7 +86,7 @@
             <intent-filter>
                 <action android:name="cn.jpush.android.ui.PushActivity" />
                 <category android:name="android.intent.category.DEFAULT" />
-                <category android:name="com.cn.bjsc" />
+                <category android:name="com.cn.ssc" />
             </intent-filter>
         </activity>
 
@@ -104,7 +104,7 @@
 
         <!-- since 3.1.0 Required SDK 核心功能-->
         <provider
-            android:authorities="bjsc.com.cn.bjsc.DownloadProvider"
+            android:authorities="com.cn.ssc.DownloadProvider"
             android:name="cn.jpush.android.service.DownloadProvider"
             android:exported="true"
             />
@@ -115,7 +115,7 @@
             android:exported="false">
             <intent-filter android:priority="1000">
                 <action android:name="cn.jpush.android.intent.NOTIFICATION_RECEIVED_PROXY" />   <!--Required  显示通知栏 -->
-                <category android:name="com.cn.bjsc" />
+                <category android:name="com.cn.ssc" />
             </intent-filter>
             <intent-filter>
                 <action android:name="android.intent.action.USER_PRESENT" />
@@ -135,21 +135,21 @@
 
         <!-- since 3.0.9 Required SDK 核心功能-->
         <provider
-            android:authorities="com.cn.bjsc.DataProvider"
+            android:authorities="com.cn.ssc.DataProvider"
             android:name="cn.jpush.android.service.DataProvider"
             android:exported="false"
             />
 
 
         <!-- User defined.  For test only  用户自定义接收消息器,3.0.7开始支持,目前新tag/alias接口设置结果会在该广播接收器对应的方法中回调-->
-        <receiver android:name="com.cn.bjsc.util.MyJPushMessageReceiver">
+        <receiver android:name="com.cn.ssc.util.MyJPushMessageReceiver">
             <intent-filter>
                 <action android:name="cn.jpush.android.intent.RECEIVE_MESSAGE" />
-                <category android:name="com.cn.bjsc"></category>
+                <category android:name="com.cn.ssc"></category>
             </intent-filter>
         </receiver>
         <receiver
-            android:name="com.cn.bjsc.util.MyReceiver"
+            android:name="com.cn.ssc.util.MyReceiver"
             android:exported="false"
             android:enabled="true">
             <intent-filter>
@@ -158,7 +158,7 @@
                 <action android:name="cn.jpush.android.intent.NOTIFICATION_RECEIVED" /> <!--Required  用户接收SDK通知栏信息的intent-->
                 <action android:name="cn.jpush.android.intent.NOTIFICATION_OPENED" /> <!--Required  用户打开自定义通知栏的intent-->
                 <action android:name="cn.jpush.android.intent.CONNECTION" /><!-- 接收网络变化 连接/断开 since 1.6.3 -->
-                <category android:name="com.cn.bjsc" />
+                <category android:name="com.cn.ssc" />
             </intent-filter>
         </receiver>
 
@@ -166,18 +166,18 @@
             android:name="com.baidu.location.f"
             android:enabled="true"
             android:process=":remote"></service>
-        <activity android:name=".WanFaActivity"></activity>
-        <activity android:name=".Splash_Activity">
+        <activity android:name="com.cn.ssc.WanFaActivity"></activity>
+        <activity android:name="com.cn.ssc.Splash_Activity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <activity android:name=".adapter.GuideActivity"></activity>
+        <activity android:name="com.cn.ssc.adapter.GuideActivity"></activity>
 
         <provider
             android:name="android.support.v4.content.FileProvider"
-            android:authorities="com.cn.bjsc.fileprovider"
+            android:authorities="com.cn.ssc.fileprovider"
             android:exported="false"
             android:grantUriPermissions="true">
             <meta-data
